# keybrain

./: .gitignore  .gitmodules  README.mkdn  fp-lib-table  wasd-code-upgrade-cache.lib  wasd-code-upgrade.kicad_pcb  wasd-code-upgrade.kicad_pro  wasd-code-upgrade.kicad_sch  wasd-code-upgrade.pro  wasd-code-upgrade.sch
fw/: Cargo.toml  README.mkdn  USB.mkdn  build.rs  memory.x  openocd.cfg  openocd.gdb
fw/.cargo/: config
fw/asm/: farjmp.S
fw/src/: debounce.rs  hid.rs  kbd.rs  main.rs  scan.rs
srch/: Cargo.toml  README.mkdn
srch/src/: main.rs
