[package]
name = "fourk"
version = "0.1.0"
authors = ["Cliff L. Biffle <code@cliffle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-semihosting = "0.5.3"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
stm32l4 = {version = "0.11", features = ["stm32l4x2", "rt"]}
zerocopy = "0.3"
byteorder = {version = "1.3.4", default-features = false}
num-derive = "0.3.1"
num-traits = {version = "0.2", default-features = false}
smart-default = "0.6.0"
cfg-if = "0.1.10"

[features]
default = ["v1"]
v1 = []

[[bin]]
name = "fourk"
test = false
bench = false

[profile.release]
opt-level = 3
lto = true
debug = 2
